# life-progress-wallpaper

./: .gitignore  GuardWallpaperUpdate.ps1  LICENSE  README.md  life_config.example.json  life_config.json  life_wallpaper.py  pyproject.toml  requirements.txt  run_wallpaper.bat  setup_task.ps1  uninstall.ps1  wallpaper_state.json
scripts/: guard_runner.ps1  guard_runner.py  install_task.ps1  install_task_wrapper.bat  run_wallpaper.bat  setup.bat  uninstall.bat  uninstall_task.ps1
src/life_wallpaper/: __init__.py  config.py  main.py  renderer.py  utils.py
src/life_wallpaper/themes/: dashboard.py
tests/: test_config.py  test_dashboard_renderer.py  test_factory.py  test_renderer.py
